# cmake-depend-on-file-issue

./: CMakeLists.txt  README.md  run_into_issue.sh
mysubdir/: CMakeLists.txt  common.py  test.py
